[gd_scene format=3 uid="uid://bb7el65bga3go"]

[ext_resource type="Script" uid="uid://dme5f24l0edsf" path="res://addons/beehave/blackboard.gd" id="beehave_blackboard_script"]
[ext_resource type="Theme" uid="uid://b7oqjbb8a4okx" path="res://assets/ui/button_theme.tres" id="button_theme"]
[ext_resource type="Script" uid="uid://clqgq1n7v0ar" path="res://addons/card-framework/card_manager.gd" id="card_manager_script"]
[ext_resource type="Script" uid="uid://dga4rlu6khb4o" path="res://scenes/claude_api.gd" id="claude_api_script"]
[ext_resource type="Script" uid="uid://sc28eostk44j" path="res://scenes/end_screen.gd" id="end_screen_script"]
[ext_resource type="PackedScene" path="res://scenes/card_factory.tscn" id="factory_scene"]
[ext_resource type="Texture2D" uid="uid://wl1u5367hbm" path="res://assets/ui/panels/gold_panel.png" id="gold_panel_tex"]
[ext_resource type="Script" uid="uid://dj46jo3lfbclo" path="res://addons/card-framework/hand.gd" id="hand_script"]
[ext_resource type="Script" uid="uid://dojjegrt0d062" path="res://scenes/card_hover_info_panel.gd" id="hover_panel_script"]
[ext_resource type="Script" uid="uid://bgyofpuimgnun" path="res://scenes/main.gd" id="main_script"]
[ext_resource type="PackedScene" path="res://scenes/reading_slot.tscn" id="reading_slot_scene"]
[ext_resource type="Texture2D" uid="uid://w026wmrlxd43" path="res://assets/ui/panels/silver_panel.png" id="silver_panel_tex"]
[ext_resource type="Script" uid="uid://b6t0l4bf7kx2u" path="res://scenes/reading_slot_manager.gd" id="slot_mgr_script"]
[ext_resource type="PackedScene" uid="uid://ke6x51kah8hl" path="res://scenes/sound_manager.tscn" id="sound_mgr_scene"]
[ext_resource type="Script" uid="uid://cvx7brci371xt" path="res://scenes/story_renderer.gd" id="story_renderer_script"]
[ext_resource type="Script" uid="uid://du2ext46a0d41" path="res://scenes/vignette_effect.gd" id="vignette_effect_script"]
[ext_resource type="Shader" uid="uid://ryt70jxj8alt" path="res://shaders/reading_vignette.gdshader" id="vignette_shader"]
[ext_resource type="Texture2D" uid="uid://b8sog7hw7hfhf" path="res://assets/ui/panels/wood_panel.png" id="wood_panel_tex"]
[ext_resource type="PackedScene" path="res://scenes/panels/intro_panel.tscn" id="intro_panel_scene"]
[ext_resource type="PackedScene" path="res://scenes/panels/resolution_panel.tscn" id="resolution_panel_scene"]
[ext_resource type="PackedScene" path="res://scenes/panels/loading_panel.tscn" id="loading_panel_scene"]
[ext_resource type="PackedScene" path="res://scenes/panels/sidebar_panel.tscn" id="sidebar_panel_scene"]
[ext_resource type="Script" path="res://scenes/hover_spotlight_manager.gd" id="hover_spotlight_mgr_script"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="beehave_tree_script"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="selector_reactive_script"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="sequence_script"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="selector_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/is_phase_condition.gd" id="is_phase_condition_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/is_client_data_ready_condition.gd" id="is_client_data_ready_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/has_client_request_failed_condition.gd" id="has_client_request_failed_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/is_deck_exhausted_condition.gd" id="is_deck_exhausted_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/set_phase_action.gd" id="set_phase_action_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/setup_game_action.gd" id="setup_game_action_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/show_loading_panel_action.gd" id="show_loading_panel_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/store_new_client_action.gd" id="store_new_client_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/show_client_error_action.gd" id="show_client_error_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/show_intro_panel_action.gd" id="show_intro_panel_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/setup_client_ui_action.gd" id="setup_client_ui_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/reading_active_action.gd" id="reading_active_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/start_resolution_timer_action.gd" id="start_resolution_timer_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/wait_for_timer_action.gd" id="wait_for_timer_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/show_resolution_action.gd" id="show_resolution_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/cleanup_cards_action.gd" id="cleanup_cards_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/check_deck_action.gd" id="check_deck_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/advance_encounter_action.gd" id="advance_encounter_script"]
[ext_resource type="Script" path="res://scenes/bt_leaves/show_end_panel_action.gd" id="show_end_panel_script"]

[sub_resource type="Curve" id="hand_rotation"]
_limits = [-12.0, 12.0, 0.0, 1.0]
_data = [Vector2(0, -12), 0.0, 24.0, 0, 1, Vector2(1, 12), 24.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="hand_vertical"]
_limits = [0.0, 50.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 35), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="ShaderMaterial" id="vignette_material"]
shader = ExtResource("vignette_shader")
shader_parameter/intensity = 0.0
shader_parameter/softness = 0.5
shader_parameter/color = Color(0.04, 0.02, 0.08, 1)
shader_parameter/spotlight_enabled = false
shader_parameter/viewport_size = Vector2(1280, 720)
shader_parameter/spotlight_center_px = Vector2(640, 360)
shader_parameter/spotlight_radius_px = 180.0
shader_parameter/spotlight_feather_px = 120.0
shader_parameter/spotlight_strength = 0.88

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("main_script")

[node name="SceneRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("button_theme")

[node name="Background" type="ColorRect" parent="SceneRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.04, 0.14, 1)

[node name="Gameplay" type="Control" parent="SceneRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardManager" type="Control" parent="SceneRoot/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("card_manager_script")
card_size = Vector2(110, 159)
card_factory_scene = ExtResource("factory_scene")

[node name="ReadingArea" type="Control" parent="SceneRoot/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ReadingSlots" type="Control" parent="SceneRoot/Gameplay/ReadingArea"]
layout_mode = 1
anchors_preset = 0
offset_left = 292.0
offset_top = 100.0
offset_right = 808.0
offset_bottom = 400.0
mouse_filter = 2

[node name="Slot0" parent="SceneRoot/Gameplay/ReadingArea/ReadingSlots" instance=ExtResource("reading_slot_scene")]

[node name="Slot1" parent="SceneRoot/Gameplay/ReadingArea/ReadingSlots" instance=ExtResource("reading_slot_scene")]
offset_left = 183.0
offset_right = 333.0

[node name="Slot2" parent="SceneRoot/Gameplay/ReadingArea/ReadingSlots" instance=ExtResource("reading_slot_scene")]
offset_left = 366.0
offset_right = 516.0

[node name="PlayerHand" type="Control" parent="SceneRoot/Gameplay/ReadingArea"]
z_index = 100
layout_mode = 1
anchors_preset = 0
offset_left = 555.0
offset_top = 570.0
offset_right = 555.0
offset_bottom = 570.0
script = ExtResource("hand_script")
max_hand_size = 3
hand_rotation_curve = SubResource("hand_rotation")
hand_vertical_curve = SubResource("hand_vertical")

[node name="CardHoverInfoPanel" type="NinePatchRect" parent="SceneRoot/Gameplay/ReadingArea"]
visible = false
z_index = 4096
layout_mode = 1
offset_left = 1020.0
offset_top = 520.0
offset_right = 1170.0
offset_bottom = 690.0
texture = ExtResource("silver_panel_tex")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("hover_panel_script")

[node name="CardHoverInfoBody" type="RichTextLabel" parent="SceneRoot/Gameplay/ReadingArea/CardHoverInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.91, 0.86, 0.77, 1)
theme_override_font_sizes/normal_font_size = 4
bbcode_enabled = true
scroll_active = false
autowrap_mode = 2

[node name="ReversedLabel" type="Label" parent="SceneRoot/Gameplay/ReadingArea/CardHoverInfoPanel"]
visible = false
layout_mode = 1
offset_top = -14.0
offset_right = 150.0
offset_bottom = -2.0
theme_override_colors/font_color = Color(0.87, 0.56, 0.56, 1)
theme_override_font_sizes/font_size = 7
text = "REVERSED"
horizontal_alignment = 1

[node name="StoryArea" type="Control" parent="SceneRoot/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StoryPanel" type="NinePatchRect" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 830.0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("wood_panel_tex")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="StoryPanelOverlay" type="ColorRect" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 836.0
offset_top = 6.0
offset_right = 1274.0
offset_bottom = 714.0
mouse_filter = 2
color = Color(0.06, 0.03, 0.12, 0.85)

[node name="StoryTitleLabel" type="Label" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 850.0
offset_top = 24.0
offset_right = 1260.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.85, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="StoryDivider" type="ColorRect" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 870.0
offset_top = 62.0
offset_right = 1240.0
offset_bottom = 63.0
mouse_filter = 2
color = Color(0.85, 0.7, 0.4, 0.3)

[node name="ClientContextText" type="RichTextLabel" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 854.0
offset_top = 74.0
offset_right = 1260.0
offset_bottom = 260.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.8, 0.75, 0.9, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true

[node name="StoryRichText" type="RichTextLabel" parent="SceneRoot/Gameplay/StoryArea"]
layout_mode = 1
offset_left = 854.0
offset_top = 280.0
offset_right = 1260.0
offset_bottom = 700.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.7, 0.65, 0.8, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true

[node name="Sidebar" parent="SceneRoot/Gameplay" instance=ExtResource("sidebar_panel_scene")]

[node name="ColumnDividerLeft" type="ColorRect" parent="SceneRoot/Gameplay"]
layout_mode = 1
offset_left = 279.0
offset_right = 280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.85, 0.7, 0.4, 0.25)

[node name="ColumnDividerRight" type="ColorRect" parent="SceneRoot/Gameplay"]
layout_mode = 1
offset_left = 830.0
offset_right = 831.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.85, 0.7, 0.4, 0.25)

[node name="OverlayLayer" type="Control" parent="SceneRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ReadingVignetteOverlay" type="ColorRect" parent="SceneRoot/OverlayLayer"]
z_index = 200
material = SubResource("vignette_material")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("vignette_effect_script")

[node name="ResolutionPanel" parent="SceneRoot/OverlayLayer" instance=ExtResource("resolution_panel_scene")]

[node name="EndPanel" type="Control" parent="SceneRoot/OverlayLayer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("end_screen_script")

[node name="Overlay" type="ColorRect" parent="SceneRoot/OverlayLayer/EndPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="EndBg" type="NinePatchRect" parent="SceneRoot/OverlayLayer/EndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -240.0
offset_right = 340.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("gold_panel_tex")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="EndBgInner" type="ColorRect" parent="SceneRoot/OverlayLayer/EndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -232.0
offset_right = 332.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.03, 0.12, 0.92)

[node name="EndBox" type="VBoxContainer" parent="SceneRoot/OverlayLayer/EndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="EndTitle" type="Label" parent="SceneRoot/OverlayLayer/EndPanel/EndBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="EndScroll" type="ScrollContainer" parent="SceneRoot/OverlayLayer/EndPanel/EndBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="EndList" type="VBoxContainer" parent="SceneRoot/OverlayLayer/EndPanel/EndBox/EndScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="PlayAgainButton" type="Button" parent="SceneRoot/OverlayLayer/EndPanel/EndBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play Again"

[node name="IntroPanel" parent="SceneRoot/OverlayLayer" instance=ExtResource("intro_panel_scene")]

[node name="LoadingPanel" parent="SceneRoot/OverlayLayer" instance=ExtResource("loading_panel_scene")]

[node name="Systems" type="Node" parent="."]

[node name="ClaudeAPI" type="Node" parent="Systems"]
script = ExtResource("claude_api_script")

[node name="SoundManager" parent="Systems" instance=ExtResource("sound_mgr_scene")]

[node name="StoryRenderer" type="Node" parent="Systems"]
script = ExtResource("story_renderer_script")

[node name="ReadingSlotManager" type="Node" parent="Systems"]
script = ExtResource("slot_mgr_script")

[node name="GameBlackboard" type="Node" parent="Systems"]
script = ExtResource("beehave_blackboard_script")

[node name="HoverSpotlightManager" type="Node" parent="Systems"]
script = ExtResource("hover_spotlight_mgr_script")

[node name="BehaviorTree" type="Node" parent="Systems"]
script = ExtResource("beehave_tree_script")
enabled = false
process_thread = 0
actor_node_path = NodePath("../..")

[node name="Root" type="Node" parent="Systems/BehaviorTree"]
script = ExtResource("selector_reactive_script")

[node name="EndSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsEnd" type="Node" parent="Systems/BehaviorTree/Root/EndSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "end"

[node name="ShowEnd" type="Node" parent="Systems/BehaviorTree/Root/EndSeq"]
script = ExtResource("show_end_panel_script")

[node name="ClientLoadingSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsClientLoading" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "client_loading"

[node name="LoadingSelector" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq"]
script = ExtResource("selector_reactive_script")

[node name="DataReadySeq" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector"]
script = ExtResource("sequence_script")

[node name="IsDataReady" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector/DataReadySeq"]
script = ExtResource("is_client_data_ready_script")

[node name="StoreClient" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector/DataReadySeq"]
script = ExtResource("store_new_client_script")

[node name="ErrorSeq" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector"]
script = ExtResource("sequence_script")

[node name="HasFailed" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector/ErrorSeq"]
script = ExtResource("has_client_request_failed_script")

[node name="ShowError" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector/ErrorSeq"]
script = ExtResource("show_client_error_script")

[node name="ShowLoading" type="Node" parent="Systems/BehaviorTree/Root/ClientLoadingSeq/LoadingSelector"]
script = ExtResource("show_loading_panel_script")

[node name="IntroSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsIntro" type="Node" parent="Systems/BehaviorTree/Root/IntroSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "intro"

[node name="ShowIntro" type="Node" parent="Systems/BehaviorTree/Root/IntroSeq"]
script = ExtResource("show_intro_panel_script")

[node name="SetupClientUI" type="Node" parent="Systems/BehaviorTree/Root/IntroSeq"]
script = ExtResource("setup_client_ui_script")

[node name="ReadingSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsReading" type="Node" parent="Systems/BehaviorTree/Root/ReadingSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "reading_active"

[node name="ReadingActive" type="Node" parent="Systems/BehaviorTree/Root/ReadingSeq"]
script = ExtResource("reading_active_script")

[node name="StartTimer" type="Node" parent="Systems/BehaviorTree/Root/ReadingSeq"]
script = ExtResource("start_resolution_timer_script")

[node name="ResolutionPendingSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsResolutionPending" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "resolution_pending"

[node name="WaitTimer" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("wait_for_timer_script")

[node name="ShowResolution" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("show_resolution_script")

[node name="CleanupCards" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("cleanup_cards_script")

[node name="CheckDeck" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("check_deck_script")

[node name="NextSelector" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq"]
script = ExtResource("selector_script")

[node name="ExhaustedSeq" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq/NextSelector"]
script = ExtResource("sequence_script")

[node name="IsDeckExhausted" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq/NextSelector/ExhaustedSeq"]
script = ExtResource("is_deck_exhausted_script")

[node name="SetEnd" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq/NextSelector/ExhaustedSeq"]
script = ExtResource("set_phase_action_script")
target_phase = "end"

[node name="AdvanceEncounter" type="Node" parent="Systems/BehaviorTree/Root/ResolutionPendingSeq/NextSelector"]
script = ExtResource("advance_encounter_script")

[node name="InitSeq" type="Node" parent="Systems/BehaviorTree/Root"]
script = ExtResource("sequence_script")

[node name="IsInit" type="Node" parent="Systems/BehaviorTree/Root/InitSeq"]
script = ExtResource("is_phase_condition_script")
expected_phase = "init"

[node name="SetupGame" type="Node" parent="Systems/BehaviorTree/Root/InitSeq"]
script = ExtResource("setup_game_action_script")
